tests/baselines/reference/exportSpecifierReferencingOuterDeclaration2.errors.txt
exportSpecifierReferencingOuterDeclaration2_A.ts(1,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
exportSpecifierReferencingOuterDeclaration2_B.ts(1,10): error TS2661: Cannot export 'X'. Only local declarations can be exported from a module.


==== exportSpecifierReferencingOuterDeclaration2_A.ts (1 errors) ====
    declare module X { export interface bar { } }
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    
==== exportSpecifierReferencingOuterDeclaration2_B.ts (1 errors) ====
    export { X };
             ~
!!! error TS2661: Cannot export 'X'. Only local declarations can be exported from a module.
    export declare function foo(): X.bar;